# Local_LLM_setup

./: .gitignore  Dockerfile  GUIDE.md  README.md  UML.md  install.sh  pyproject.toml  uninstall.sh
.cursor/plans/: tui_ollama_vllm_setup_6dc989bb.plan.md
llm_local/profiles/: sample.yaml
profiles/: sample.yaml
src/local_llm_setup/: __init__.py  __main__.py  cli.py  markup.py  paths.py  ports.py  runner.py  urls.py
src/local_llm_setup/detect/: __init__.py  host.py
src/local_llm_setup/frameworks/: __init__.py  base.py  llamacpp.py  ollama.py  sglang.py  vllm.py
src/local_llm_setup/instances/: __init__.py  registry.py
src/local_llm_setup/models/: __init__.py  config.py  validation.py
src/local_llm_setup/profiles/: __init__.py  store.py
src/local_llm_setup/renderers/: __init__.py  compose.py  nginx.py
src/local_llm_setup/tui/: __init__.py  app.py  commands.py  full_config.py  styles.py  theme.py  widgets.py
tests/: test_cli.py  test_command_log.py  test_commands.py  test_curl.py  test_detect.py  test_frameworks.py  test_full_config.py  test_gpu_devices.py  test_instances.py  test_markup.py  test_model_cache.py  test_nginx.py  test_output_log.py  test_ports.py  test_profiles_delete.py  test_pull_skip.py  test_renderers.py  test_runner.py  test_stop_all.py  test_urls.py  test_vllm_compose.py
