[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-llm-setup"
version = "0.1.0"
description = "TUI wizard for hosting local LLMs with Ollama, vLLM, llama.cpp, and SGLang"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "local-llm-setup" }]
keywords = ["llm", "ollama", "vllm", "tui", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.80",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
local-llm-setup = "local_llm_setup.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_llm_setup"]

[tool.hatch.build.targets.sdist]
include = [
    "src/local_llm_setup",
    "llm_local/profiles/sample.yaml",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["local_llm_setup"]
